# gherkin-verifier

./: .coverage  AGENTS.md  LICENSE  README.md  cucumber-website-a2557b8d5a9637c8.txt  pyproject.toml  requirements.txt  verify.py
features/: 01_contraditorias.feature  02_contrarias.feature  03_privativas.feature  04_relativas.feature  05_autonegacao.feature  06_modais.feature  07_suplencia.feature  08_contrassenso.feature  09_consistente.feature
gherkin_verifier/: __init__.py  cli.py  domain.py  engine.py  extractor.py  parser.py  symbolic.py
gherkin_verifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gherkin_verifier/contradictions/: __init__.py  contradictory.py  contrary.py  countersense.py  modal.py  privative.py  relative.py  self_negation.py  subcontrary.py  suppositio.py
tests/: test_contradictions_2_4.py  test_contradictions_5_7.py  test_contradictions_8_10.py  test_contradictory.py  test_domain.py  test_engine.py  test_extractor.py  test_parser.py  test_verify.py
